Update Maven settings to be centered around JDK17