@@ -46,13 +46,11 @@
   <properties>
     <!-- Basics -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.language.version>1.7</java.language.version>
-    <java.jdk.version>1.7</java.jdk.version>
+    <jdk.release>17</jdk.release>
 
     <!-- Build system and static code analysis -->
-    <linters.errorprone.version>2.4.0</linters.errorprone.version>
+    <linters.errorprone.version>2.42.0</linters.errorprone.version>
     <linters.spotbugs.plugin.version>4.7.2.1</linters.spotbugs.plugin.version>
-    <linters.spotbugs.core.version>4.0.3</linters.spotbugs.core.version>
     <linters.pmd.version>3.14.0</linters.pmd.version>
 
     <!-- Unit tests and friends -->
@@ -91,42 +89,7 @@
     </profile>
 
     <profile>
-      <id>extra-jdk1.8-options</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <!-- error_prone on jdk1.8 -->
-                <compilerId>javac-with-errorprone</compilerId>
-                <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                <!-- /error_prone on jdk1.8 -->
-              </configuration>
-
-              <!-- error_prone on jdk1.8 -->
-              <dependencies>
-                <dependency>
-                  <groupId>org.codehaus.plexus</groupId>
-                  <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                  <version>2.8.6</version>
-                </dependency>
-              </dependencies>
-              <!-- /error_prone on jdk1.8 -->
-
-              <inherited>true</inherited>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-
-    <profile>
-      <id>outdated</id>
+      <id>upgrades</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
@@ -207,10 +170,10 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.6</version>
+                  <version>3.9.0</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>${java.language.version}</version>
+                  <version>[${jdk.release},)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -222,16 +185,38 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.14.1</version>
         <configuration>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
-          <source>${java.jdk.version}</source>
-          <target>${java.jdk.version}</target>
+          <release>${jdk.release}</release>
           <fork>true</fork>
           <compilerArgs>
+            <!-- Contents of these arguments may not contain newlines, except at start and end. -->
             <arg>-XDcompilePolicy=simple</arg>
-            <arg>-Xplugin:ErrorProne</arg>
+
+            <!-- error_prone & friends -->
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
+
+            <!--
+            re: SelfAssertion - affected tests will be updated in subsequent PR, just to keep JDK-related upgrades in
+            isolation
+            -->
+            <arg><![CDATA[
+              -Xplugin:ErrorProne -Xep:MissingSummary:OFF -Xep:SelfAssertion:WARN
+            ]]>
+            </arg>
+            <!-- /error_prone -->
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
@@ -294,7 +279,7 @@
         </executions>
         <configuration>
           <verbose>true</verbose>
-          <targetJdk>${java.jdk.version}</targetJdk>
+          <targetJdk>${jdk.release}</targetJdk>
           <rulesets>
             <ruleset>${project.basedir}/src/ci/resources/pmd.xml</ruleset>
           </rulesets>
